fix: improve navigation layout with flex-wrap

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -19,7 +19,8 @@ h6 {
 }
 
 p,
-span {
+span,
+a {
   text-wrap: pretty;
   text-wrap-style: pretty;
 }
